Made some accessibility changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <script src="scripts/main.js" defer></script>
     <script src="scripts/courses.js" defer></script>
 </head>
@@ -89,8 +90,6 @@
         <p>&copy; <span id="currentYear"></span> | BurdiApps | Bakersfield, California, United States</p>
         <p id="lastModified"></p>
     </footer>
-
-    <script src="scripts/main.js"></script>
 </body>
 
 </html>
