fixed audit issues that I missed

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Greater Bakersfield Chamber of Commerce Member Directory - Connect with local businesses and community leaders in Bakersfield, California.">
-    <meta name="author" content="Burdi">
+    <meta name="author" content="Burdi Apps">
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="Bakersfield Chamber - Member Directory">
     <meta property="og:description"
         content="Connect with local businesses and community leaders in Bakersfield, California.">
-    <meta property="og:image" content="https://burdi.github.io/wdd231/chamber/images/chamber-logo.svg">
-    <meta property="og:url" content="https://burdi.github.io/wdd231/chamber/directory.html">
+    <meta property="og:image" content="https://burdiapps.github.io/wdd231/chamber/images/chamber-logo.png">
+    <meta property="og:url" content="https://burdiapps.github.io/wdd231/chamber/directory.html">
     <meta property="og:type" content="website">
 
     <title>Member Directory - Greater Bakersfield Chamber</title>
