Update chamber pages, add weather page, and week3 modules

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,7 +44,7 @@
                     <p>Chamber of Commerce</p>
                 </div>
             </div>
-            <button id="menu-toggle" aria-label="Toggle navigation menu">
+            <button id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -53,10 +53,10 @@
     </header>
 
     <!-- Navigation -->
-    <nav id="main-nav">
+    <nav id="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="directory.html" class="active">Directory</a></li>
+            <li><a href="directory.html" class="active" aria-current="page">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="discover.html">Discover</a></li>
         </ul>
@@ -72,17 +72,17 @@
             </section>
 
             <!-- View Toggle Controls -->
-            <div class="view-controls">
-                <button id="grid-view" class="view-btn active" aria-label="Grid view">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+            <div class="view-controls" role="toolbar" aria-label="View options">
+                <button id="grid-view" class="view-btn active" aria-label="Grid view" aria-pressed="true">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                         <rect x="3" y="3" width="7" height="7" />
                         <rect x="14" y="3" width="7" height="7" />
                         <rect x="3" y="14" width="7" height="7" />
                         <rect x="14" y="14" width="7" height="7" />
                     </svg>
                 </button>
-                <button id="list-view" class="view-btn" aria-label="List view">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <button id="list-view" class="view-btn" aria-label="List view" aria-pressed="false">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                         <rect x="3" y="4" width="18" height="2" />
                         <rect x="3" y="11" width="18" height="2" />
                         <rect x="3" y="18" width="18" height="2" />
@@ -91,7 +91,8 @@
             </div>
 
             <!-- Members Display -->
-            <div id="members-container" class="members-grid">
+            <div id="members-container" class="members-grid" role="region" aria-label="Business member directory"
+                aria-live="polite">
                 <!-- Members will be loaded here -->
             </div>
         </div>
