--- a/prophets.html
+++ b/prophets.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <header>
+    <header role="banner">
         <h1>Latter-day Prophets</h1>
     </header>
-    <main>
-        <div id="cards"></div>
+    <main role="main">
+        <div id="cards" role="list" aria-label="Prophet cards"></div>
     </main>
-    <footer>
-        James Burdick | Latter-day Prophets
+    <footer role="contentinfo">
+        <p>James Burdick | Latter-day Prophets</p>
     </footer>
 </body>
 
