--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,44 +4,201 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce - Coming Soon</title>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
+    <meta name="description"
+        content="Greater Bakersfield Chamber of Commerce - Supporting local businesses and economic growth in Bakersfield, California.">
+    <meta name="author" content="James Burdick">
 
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        }
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="Greater Bakersfield Chamber of Commerce">
+    <meta property="og:description"
+        content="Supporting local businesses and economic growth in Bakersfield, California.">
+    <meta property="og:image" content="https://burdiapps.github.io/wdd231/chamber/images/chamber-logo.png">
+    <meta property="og:url" content="https://burdiapps.github.io/wdd231/chamber/">
+    <meta property="og:type" content="website">
 
-        h1 {
-            color: #4A90E2;
-        }
+    <title>Greater Bakersfield Chamber of Commerce</title>
 
-        a {
-            color: #2C5AA0;
-            text-decoration: none;
-            font-weight: 600;
-        }
-    </style>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/chamber-logo.png">
+
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/larger.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Nunito:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Chamber of Commerce Project</h1>
-        <p>This project will be completed in Week 2.</p>
-        <p><a href="../index.html">← Back to Home</a></p>
-    </div>
+    <!-- Header -->
+    <header>
+        <div class="header-container">
+            <div class="logo">
+                <img src="images/chamber-logo.png" alt="Greater Bakersfield Chamber of Commerce Logo" width="60"
+                    height="60">
+                <div class="logo-text">
+                    <h1>Greater Bakersfield</h1>
+                    <p>Chamber of Commerce</p>
+                </div>
+            </div>
+            <button id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </header>
+
+    <!-- Navigation -->
+    <nav id="main-nav" role="navigation" aria-label="Main navigation">
+        <ul>
+            <li><a href="index.html" class="active" aria-current="page">Home</a></li>
+            <li><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
+            <li><a href="discover.html">Discover</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <!-- Hero Section with Call to Action -->
+        <section class="hero">
+            <div class="hero-content">
+                
+                <h2>Welcome to Bakersfield</h2>
+                <img src="images/bakersfield-hero.jpg" alt="Bakersfield cityscape" width="600" height="400">
+                <p>Growing Business, Building Community</p>
+                <a href="join.html" class="cta-button">Join the Chamber Today</a>
+            </div>
+        </section>
+
+        <!-- Home Page Grid Content -->
+        <div class="home-container">
+            <!-- Current Events Section -->
+            <section class="events-section">
+                <h2>🗓️ Upcoming Events</h2>
+                <div class="events-list">
+                    <article class="event-card">
+                        <div class="event-date">
+                            <span class="day">25</span>
+                            <span class="month">JAN</span>
+                        </div>
+                        <div class="event-info">
+                            <h3>Business Networking Mixer</h3>
+                            <p>Join fellow business owners for an evening of networking at The Padre Hotel.</p>
+                            <span class="event-time">5:30 PM - 7:30 PM</span>
+                        </div>
+                    </article>
+                    <article class="event-card">
+                        <div class="event-date">
+                            <span class="day">02</span>
+                            <span class="month">FEB</span>
+                        </div>
+                        <div class="event-info">
+                            <h3>Small Business Workshop</h3>
+                            <p>Learn essential strategies for growing your small business in today's market.</p>
+                            <span class="event-time">10:00 AM - 12:00 PM</span>
+                        </div>
+                    </article>
+                    <article class="event-card">
+                        <div class="event-date">
+                            <span class="day">14</span>
+                            <span class="month">FEB</span>
+                        </div>
+                        <div class="event-info">
+                            <h3>Annual Awards Gala</h3>
+                            <p>Celebrating excellence in Bakersfield's business community.</p>
+                            <span class="event-time">6:00 PM - 10:00 PM</span>
+                        </div>
+                    </article>
+                </div>
+            </section>
+
+            <!-- Weather Section -->
+            <section class="weather-section">
+                <h2>🌤️ Local Weather</h2>
+                <div class="weather-card">
+                    <div class="current-weather">
+                        <div class="weather-main">
+                            <img id="weather-icon" src="" alt="Weather icon">
+                            <span id="current-temp"></span>
+                        </div>
+                        <p id="weather-desc"></p>
+                        <p class="weather-location">Bakersfield, CA</p>
+                    </div>
+                    <div class="weather-forecast">
+                        <h3>3-Day Forecast</h3>
+                        <div id="forecast-container">
+                            <!-- Forecast will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Company Spotlights Section -->
+            <section class="spotlights-section">
+                <h2>⭐ Member Spotlights</h2>
+                <div id="spotlights-container">
+                    <!-- Spotlights will be loaded here -->
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <address>
+                    <p>1725 Eye Street</p>
+                    <p>Bakersfield, CA 93301</p>
+                    <p>Phone: <a href="tel:6613274421">(661) 327-4421</a></p>
+                    <p>Email: <a href="mailto:info@bakochamber.com">info@bakochamber.com</a></p>
+                </address>
+            </div>
+
+            <div class="footer-section">
+                <h3>Connect</h3>
+                <div class="social-links">
+                    <a href="#" aria-label="Facebook">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+                        </svg>
+                    </a>
+                    <a href="#" aria-label="LinkedIn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h3>Resources</h3>
+                <ul>
+                    <li><a href="#">Member Benefits</a></li>
+                    <li><a href="#">Events Calendar</a></li>
+                    <li><a href="#">Business Resources</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; <span id="currentYear"></span> Greater Bakersfield Chamber of Commerce. All rights reserved.</p>
+            <p>WDD 231 Project | James Burdick</p>
+            <p>Last Modified: <span id="lastModified"></span></p>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="scripts/home.js"></script>
 </body>
 
 </html>
