--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 <body>
     <header>
-        <img src="images/logo.svg" alt="site logo" width="1" height="1">
+        <img src="images/logo.svg" alt="WDD 231 Course Logo" width="1" height="1">
         <span>James Burdick</span>
-        <button id="nav-button" class="hamburger" aria-label="navigation"></button>
+        <button id="nav-button" class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false"></button>
     </header>
 
-    <nav id="nav-bar" class="navigation">
+    <nav id="nav-bar" class="navigation" role="navigation" aria-label="Main navigation">
         <ul>
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="chamber/">Chamber</a></li>
